[package]
name = "query-params-derive"
version = "0.0.1"
authors = [
  "Alessio Coltellacci <lightplay8@gmail.com>",
  "Łukasz Kurowski <crackcomm@gmail.com>"
]

description = "Rust macro to automatically implement the serialization to http query parameters for arbitrary structs."
homepage = "https://github.com/crackcomm/query_params"
repository = "https://github.com/crackcomm/query_params"
documentation = "https://docs.rs/query-params-derive"

categories = ["development-tools"]
keywords = ["derive", "macro", "http"]
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "^0.11.11"
quote = "^0.3.15"
query-params-trait = { version = "^0.0.1", path = "../trait" }
