[package]
name = "query-params-derive"
version = "0.1.1"
authors = [
  "Alessio Coltellacci <lightplay8@gmail.com>",
  "Łukasz Kurowski <crackcomm@gmail.com>"
]

description = "Rust macro to automatically implement the serialization to http query parameters for arbitrary structs."
homepage = "https://github.com/crackcomm/query_params"
repository = "https://github.com/crackcomm/query_params"
documentation = "https://docs.rs/query-params-derive"

categories = ["development-tools"]
keywords = ["derive", "macro", "http"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "^1.0.2"
syn = { version = "^1.0.13", features = ["full", "derive", "extra-traits"] }
proc-macro2 = { version = "^1.0.7" }
query-params-trait = { version = "^0.0.1", path = "../trait" }
