[package]
name = "query-params-serialize"
version = "0.0.2"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
description = "Query parameters serde serializer."
homepage = "https://github.com/crackcomm/query_params"
repository = "https://github.com/crackcomm/query_params"
documentation = "https://docs.rs/query-params-serialize"
license = "GPL-3.0"

[dependencies]
serde = "^1.0.0"
failure = "^0.1.6"
bytes = "^0.5.0"
