[package]
name = "query-params-tests"
version = "1.0.0"
authors = [
  "Alessio Coltellacci <lightplay8@gmail.com>",
  "Łukasz Kurowski <crackcomm@gmail.com>"
]

description = "Rust macro to automatically implement the serialization to http query parameters for arbitrary structs."
homepage = "https://github.com/crackcomm/query_params"
repository = "https://github.com/crackcomm/query_params"
documentation = "https://docs.rs/query-params-derive"

categories = ["development-tools"]
keywords = ["derive", "macro", "http"]
license = "MIT"

[dependencies]
serde = "^1.0.0"
serde_derive = "^1.0.0"
query-params-trait = { version = "^1.0.1", path = "../trait" }
